# ft_linear_regression

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py  tasks.py
.github/workflows/: ci.yml
src/linear_regression/: __init__.py
src/linear_regression/cli/: __init__.py  predict.py  train.py
src/linear_regression/data/: __init__.py  exceptions.py  preprocessor.py  reader.py  validator.py
src/linear_regression/math/: __init__.py  gradient_descent.py  utils.py
src/linear_regression/model/: __init__.py  linear_regression.py
src/linear_regression/services/: __init__.py  precision.py  prediction.py  training.py
tests/: __init__.py  test_cli_integration.py  test_data_preprocessor.py  test_data_reader.py  test_data_validator.py  test_gradient_descent.py  test_math_utils.py  test_model.py  test_precision_service.py  test_prediction_service.py  test_training_service.py
